--- a/src/App.css
+++ b/src/App.css
@@ -56,7 +56,7 @@ textarea {
     border-left: 4px solid lightseagreen;
 }
 .content {
-    margin: 1vh 1vh 0 0;
+    margin: 1vh 0 0 1vh;
     grid-area: c;
     background-color: rgba(155,155,155,0.5);
     border: 2px inset black;
