--- a/src/components/navbar/navbar.module.css
+++ b/src/components/navbar/navbar.module.css
@@ -1,11 +1,12 @@
 .nav {
-    margin: 1vh;
+    margin: 1vh 0 0 1vh;
+    padding: 1vh;
     grid-area: n;
-    background: rgb(255,0,0);
+    background: rgb(255, 0, 0);
     border: 2px inset black;
     min-height: 500px;
     max-height: 700px;
-    background: linear-gradient(145deg, rgba(255,0,0,1) 0%, rgba(255,115,0,1) 44%, rgba(255,179,0,1) 91%);
+    background: linear-gradient(145deg, rgba(255, 0, 0, 1) 0%, rgba(255, 115, 0, 1) 44%, rgba(255, 179, 0, 1) 91%);
     -webkit-box-shadow: -5px -5px 54px 2px rgba(34, 60, 80, 0.6) inset;
     -moz-box-shadow: -5px -5px 54px 2px rgba(34, 60, 80, 0.6) inset;
     box-shadow: -5px -5px 54px 2px rgba(34, 60, 80, 0.6) inset;
@@ -14,6 +15,7 @@
 .ulnav {
     list-style-type: none;
     padding: 3vh;
+    text-align: center;
 }
 
 .itemnav {
@@ -23,5 +25,5 @@
 
 .itemnav.active {
     color: gold;
-    text-decoration: line-through rgba(255,255,255,0.5);
+    text-decoration: line-through rgba(255, 255, 255, 0.7);
 }
