--- a/src/components/header/header.module.css
+++ b/src/components/header/header.module.css
@@ -26,3 +26,33 @@
     margin: 3px;
     width: 5vh;
 }
+.area {
+    text-align: center;
+
+    color: black;
+
+    font-weight: 700;
+    text-transform: uppercase;
+    animation: blur 2.5s ease-out infinite;
+    text-shadow: 0px 0px 5px red, 0px 0px 7px orange;
+}
+
+@keyframes blur {
+    50% {
+        text-shadow:0px 0px 10px #ee0a0a,
+        0px 0px 10px #ee0a0a,
+        0px 0px 20px #ee0a0a,
+        0px 0px 25px #ee0a0a,
+        0px 0px 25px rgba(255,115,0,1),
+        0px 0px 50px rgba(255,115,0,1),
+        0px 0px 50px rgba(255,115,0,1),
+        0px 0px 150px yellow,
+        0px 10px 100px yellow,
+        0px 10px 100px yellow,
+        0px 10px 100px yellow,
+        0px 10px 100px yellow,
+        0px -10px 100px yellow,
+        0px -10px 100px yellow;
+    }
+}
+
