--- a/src/components/navbar/navbar.module.css
+++ b/src/components/navbar/navbar.module.css
@@ -27,3 +27,54 @@
     color: gold;
     text-decoration: line-through rgba(255, 255, 255, 0.7);
 }
+
+@keyframes loader {
+    0% {transform:rotate(-45deg)}
+    50%{transform:rotate(-135deg)}
+    100%{transform:rotate(-225deg)}}
+@keyframes span-1 {
+    0% {transform:translate(50px,0);}
+    50%{transform:translate(-50px, 0)}
+    100%{transform:translate(50px,0);}}
+@keyframes span-2 {
+    0%{transform:translate(-50px,0);}
+    50%{transform:translate(50px, 0)}
+    100%{transform:translate(-50px,0);}}
+@keyframes span-3 {
+    0%{transform:translate(0,50px);}
+    50%{transform:translate(0, -50px)}
+    100%{transform:translate(0,50px);}}
+@keyframes span-4 {
+    0%{transform:translate(0,-50px);}
+    50%{transform:translate(0, 50px)}
+    100%{transform:translate(0,-50px);}}
+.loader {
+    margin: auto;
+    width: 70px;
+    height: 70px;
+    position: relative;
+    animation: loader 3s infinite linear;
+}
+
+.loader span {
+    width: 70px;
+    height: 70px;
+    position: absolute;
+    left: 0;
+    top: 0;
+}
+.loader span:nth-child(1) {
+    animation: span-1 5s ease-in-out infinite;
+}
+.loader span:nth-child(2) {
+    animation: span-2 5s ease-in-out infinite;
+}
+.loader span:nth-child(3) {
+    animation: span-3 5s ease-in-out infinite;
+}
+.loader span:nth-child(4) {
+    animation: span-4 5s ease-in-out infinite;
+}
+
+
+
