--- a/src/components/Profile/ProfileInfo/ProfileInfo.module.css
+++ b/src/components/Profile/ProfileInfo/ProfileInfo.module.css
@@ -1,6 +1,9 @@
 .profile {
+    padding: 5vh;
     display: flex;
-    margin: 5vh;
+    justify-content: space-around;
+    align-items: center;
+    align-content: center;
 }
 
 .stats {
@@ -46,5 +49,12 @@
 50% {
     transform: rotate(20deg);
 }
+}
+.profileInfo {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: center;
+    align-content: center;
 }
 
