--- a/src/components/dialogs/message/message.module.css
+++ b/src/components/dialogs/message/message.module.css
@@ -1,3 +1,7 @@
 .messages {
-
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: flex-start;
+    align-content: center;
 }
