--- a/src/components/header/header.module.css
+++ b/src/components/header/header.module.css
@@ -3,7 +3,7 @@
     background: rgb(255,0,0);
     background: linear-gradient(38deg, rgba(255,0,0,1) 0%, rgba(255,115,0,1) 56%, rgba(241,255,0,1) 100%);
     position: fixed;
-    width: 1200px;
+    width: 65%;
     border: 2px inset black;
     border-top: 0;
     border-radius: 40px;
