--- a/src/App.css
+++ b/src/App.css
@@ -12,7 +12,7 @@ body {
 .app-wrapper {
     margin: 0 auto;
     display: grid;
-    width: 65%;
+    width: 1200px;
     grid-template-areas:
     "h h"
     "n c";
@@ -21,7 +21,11 @@ body {
     /*grid-gap: 10px;*/
 
 }
-
+@media screen and (max-device-width: 767px) {
+    .app-wrapper {
+        width:100%;
+    }
+}
 .style {
     border-radius: 50px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.5); /* Параметры тени */
