--- a/src/App.css
+++ b/src/App.css
@@ -11,6 +11,7 @@ body {
 
 .app-wrapper {
     margin: 0 auto;
+    padding-bottom: 20px;
     display: grid;
     width: 1200px;
     grid-template-areas:
