--- a/src/components/users/users.module.css
+++ b/src/components/users/users.module.css
@@ -13,7 +13,7 @@
 }
 .pages span {
     cursor: pointer;
-    width: 20px;
+    min-width: 20px;
     margin: 2px 5px;
     padding: 2px 7px;
     border: 1px solid #ff9232;
