--- a/src/components/Profile/ProfileInfo/ProfileInfo.module.css
+++ b/src/components/Profile/ProfileInfo/ProfileInfo.module.css
@@ -1,13 +1,13 @@
 .profile {
     padding: 5vh;
     display: flex;
-    justify-content: space-around;
+    justify-content: space-evenly;
     align-items: center;
     align-content: center;
 }
 
 .stats {
-    margin: 0 0 0 5vh;
+    margin: 2vh 5vh 0 2vh;
 }
 
 .name {
@@ -24,13 +24,14 @@
 .imgprofile {
     max-width: 150px;
     max-height: 150px;
-    justify-content: flex-start;
+    justify-content: center;
     animation: rotation 0.3s;
     animation-delay: 2s;
     animation-iteration-count: 2;
 }
 
 .spotify {
+    width: 33%;
     margin: auto;
 }
 
