--- a/src/components/header/header.module.css
+++ b/src/components/header/header.module.css
@@ -32,12 +32,12 @@
     margin: 3px;
     width: 5vh;
 }
+.area p {
+    margin: 0;
+}
 .area {
     text-align: center;
-
     color: black;
-
-    font-weight: 700;
     text-transform: uppercase;
     animation: blur 2.5s ease-out infinite;
     text-shadow: 0px 0px 5px red, 0px 0px 7px orange;
