--- a/src/components/users/users.module.css
+++ b/src/components/users/users.module.css
@@ -1,16 +1,26 @@
 .users {
-    padding: 3vh 0 0 3vh;
+    padding: 3vh;
     display: flex;
     flex-direction: row;
-    align-items: center;
     flex-wrap: wrap;
     text-align: center;
+    width: calc(100% - 6vh);
 }
 .users > div {
     margin: 5px;
+    width: 11.4%;
+}
+
+@media screen and (max-device-width: 767px) {
+    .users > div {
+        width: auto;
+    }
 }
 
 .userPhoto {
+
+}
+.status {
 
 }
 .pages {
