--- a/src/App.css
+++ b/src/App.css
@@ -71,6 +71,7 @@ textarea {
     grid-area: c;
     background-color: rgba(155, 155, 155, 0.5);
     border: 2px inset black;
+    height: calc(100% + 60px);
 }
 
 .done {
