--- a/src/App.css
+++ b/src/App.css
@@ -14,6 +14,15 @@ body {
 .img2 {
     right: 0; bottom: 0;position: absolute; z-index: 0
 }
+@media screen and (max-device-width: 767px){
+    .img1 {
+        display: none;
+    }
+    .img2 {
+        display: none;
+    }
+
+}
 .content div {
     z-index: 1;
 }
