--- a/src/App.css
+++ b/src/App.css
@@ -8,24 +8,47 @@
 body {
     background-color: rgb(30, 30, 30);
 }
+.profile {
+    position: relative;
+}
 .img1 {
-    transform: scale(-1,1);left: 0; bottom: 0;position: absolute; z-index: 0
+    transform: scale(-1, 1);
+    left: 0;
+    bottom: 0;
+    position: absolute;
+    z-index: 0;
+    opacity: .5;
 }
+
 .img2 {
-    right: 0; bottom: 0;position: absolute; z-index: 0
+    right: 0;
+    bottom: 0;
+    position: absolute;
+    z-index: 0;
+    opacity: .5;
 }
-@media screen and (max-device-width: 767px){
+
+@media screen and (max-device-width: 767px) {
     .img1 {
         display: none;
     }
+
     .img2 {
         display: none;
     }
 
 }
+
 .content div {
-    z-index: 1;
+    z-index: 1004;
 }
+.todo_page {
+    height: 100%;
+    width: 100%;
+    position: relative;
+    padding: 3vh;
+}
+
 .app-wrapper {
     margin: 0 auto;
     padding-bottom: 20px;
@@ -39,11 +62,13 @@ body {
     /*grid-gap: 10px;*/
 
 }
+
 @media screen and (max-device-width: 767px) {
     .app-wrapper {
-        width:100%;
+        width: 100%;
     }
 }
+
 .style {
     border-radius: 50px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.5); /* Параметры тени */
@@ -64,11 +89,13 @@ body {
     padding: 6px 12px;
     text-decoration: none;
     text-shadow: 0px 1px 0px #e1e2ed;
+    transition: .3s;
 }
 
 .myButton:hover {
     background: linear-gradient(to bottom, #bab1ba 5%, #ededed 100%);
     background-color: #bab1ba;
+    transform: scale(1.05);
 }
 
 .myButton:active {
@@ -97,7 +124,7 @@ textarea {
 }
 
 button:hover {
-    background: #e58811 !important;
+    background: #b0edff!important;
 }
 
 .lds-ellipsis {
@@ -336,10 +363,12 @@ button:hover {
     width: 80px;
     height: 80px;
 }
+
 .lds-roller div {
     animation: lds-roller 1.2s cubic-bezier(0.5, 0, 0.5, 1) infinite;
     transform-origin: 40px 40px;
 }
+
 .lds-roller div:after {
     content: " ";
     display: block;
@@ -350,62 +379,79 @@ button:hover {
     background: #dfc;
     margin: -4px 0 0 -4px;
 }
+
 .lds-roller div:nth-child(1) {
     animation-delay: -0.036s;
 }
+
 .lds-roller div:nth-child(1):after {
     top: 63px;
     left: 63px;
 }
+
 .lds-roller div:nth-child(2) {
     animation-delay: -0.072s;
 }
+
 .lds-roller div:nth-child(2):after {
     top: 68px;
     left: 56px;
 }
+
 .lds-roller div:nth-child(3) {
     animation-delay: -0.108s;
 }
+
 .lds-roller div:nth-child(3):after {
     top: 71px;
     left: 48px;
 }
+
 .lds-roller div:nth-child(4) {
     animation-delay: -0.144s;
 }
+
 .lds-roller div:nth-child(4):after {
     top: 72px;
     left: 40px;
 }
+
 .lds-roller div:nth-child(5) {
     animation-delay: -0.18s;
 }
+
 .lds-roller div:nth-child(5):after {
     top: 71px;
     left: 32px;
 }
+
 .lds-roller div:nth-child(6) {
     animation-delay: -0.216s;
 }
+
 .lds-roller div:nth-child(6):after {
     top: 68px;
     left: 24px;
 }
+
 .lds-roller div:nth-child(7) {
     animation-delay: -0.252s;
 }
+
 .lds-roller div:nth-child(7):after {
     top: 63px;
     left: 17px;
 }
+
 .lds-roller div:nth-child(8) {
     animation-delay: -0.288s;
 }
+
 .lds-roller div:nth-child(8):after {
     top: 56px;
     left: 12px;
 }
+
 @keyframes lds-roller {
     0% {
         transform: rotate(0deg);
@@ -414,12 +460,14 @@ button:hover {
         transform: rotate(360deg);
     }
 }
+
 .lds-hourglass {
     display: inline-block;
     position: relative;
     width: 80px;
     height: 80px;
 }
+
 .lds-hourglass:after {
     content: " ";
     display: block;
@@ -432,6 +480,7 @@ button:hover {
     border-color: #fed transparent #fed transparent;
     animation: lds-hourglass 1.2s infinite;
 }
+
 @keyframes lds-hourglass {
     0% {
         transform: rotate(0);
