--- a/src/components/Profile/ProfileInfo/ProfileInfo.module.css
+++ b/src/components/Profile/ProfileInfo/ProfileInfo.module.css
@@ -1,11 +1,11 @@
 .profile {
-    padding: 5vh;
+    padding: 5vh 0;
     display: flex;
+    width: 90%!important;
     justify-content: space-evenly;
     align-items: center;
     align-content: center;
 }
-
 .stats {
     margin: 2vh 5vh 0 2vh;
 }
@@ -62,4 +62,10 @@
 }
 .profileInfo > div {
     width: 100%;
+}
+.work {
+    text-align: center;
+    margin: 10px;
+    padding: 5px;
+    border: 5px dashed coral;
 }
