--- a/src/components/login/login.module.css
+++ b/src/components/login/login.module.css
@@ -1,10 +1,14 @@
 .loginRel{
-    position: relative;
-    width: 100%;
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    align-items: center;
+    justify-content: center;
     height: 100%;
+    width: auto;
 }
 .login {
-    position: absolute;
+    position: relative;
     display: flex;
     flex-direction: column;
     text-align: center;
@@ -13,12 +17,10 @@
     z-index: 102;
     background: #947244;
     width: 300px;
-    height: 300px;
     border-radius: 50px;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
+    padding: 15px;
 }
+
 .login > div {
     z-index: 102;
 }
