--- a/src/components/users/users.module.css
+++ b/src/components/users/users.module.css
@@ -4,6 +4,7 @@
     flex-direction: row;
     flex-wrap: wrap;
     text-align: center;
+    justify-content: center;
     width: calc(100% - 6vh);
 }
 .users > div {
