--- a/src/components/LessonDialogs/LessonDialogs.module.css
+++ b/src/components/LessonDialogs/LessonDialogs.module.css
@@ -3,7 +3,23 @@
     flex-direction: row;
     padding: 3vh;
 }
-
+.dialog > form {
+    display: flex;
+    width: 100%;
+    text-align: center;
+    justify-content: center;
+}
+.dialog > form > button {
+    margin: 5px 10px;
+    border-radius: 50px;
+    border-inline: none;
+    border: none;
+    transition: .2s;
+}
+.dialog > form > button:hover {
+    background: #97ffee;
+    cursor: pointer;
+}
 .users {
     background: #1fdb83;
     width: 10%;
@@ -14,7 +30,7 @@
 
 .dialog {
     width: 90%;
-    background: #d55be8;
+    background: #dcb583;
     position: relative;
     display: flex;
     flex-direction: column;
@@ -40,7 +56,7 @@
 
 .myMessage span {
     border-radius: 25px;
-    background: #666666;
+    background: #b479d0;
     padding: 5px 8px;
 }
 
