--- a/src/components/Profile/ProfileInfo/ProfileInfo.module.css
+++ b/src/components/Profile/ProfileInfo/ProfileInfo.module.css
@@ -23,7 +23,10 @@
 .statitem {
 
 }
-
+.imgPro {
+    display: flex;
+    flex-direction: column;
+}
 .imgprofile {
     max-width: 150px;
     max-height: 150px;
