--- a/src/components/navbar/navbar.module.css
+++ b/src/components/navbar/navbar.module.css
@@ -18,13 +18,25 @@
 }
 
 .ulnav {
-
     list-style-type: none;
     padding: 3vh;
     text-align: center;
 }
-
+.ulnavT {
+    position: fixed;
+    z-index: 1007;
+    background-color: black;
+}
+@media screen and (max-width: 1200px) {
+    .nav {
+        display: none;
+    }
+}
 .itemnav {
+    text-decoration: none;
+    color: white;
+}
+.itemnavT {
     text-decoration: none;
     color: white;
 }
@@ -81,6 +93,4 @@
 .loader span:nth-child(4) {
     animation: span-4 5s ease-in-out infinite;
 }
-
-
 
